--- a/about.html
+++ b/about.html
@@ -48,13 +48,12 @@
               </div>
             <div class="col-md-6 mt-3 mb-3">
               <h1>Hello!</h1>
-              <p> My name is Valentina, a designer and illustrator based in Sacramento, California.
-                  I’m currently a graphic design BFA candidate and a design intern for The Lab, an on-campus graphic design studio of Union WELL, Inc. at Sacramento State.
-                <br></br> Like many designers and illustrators, my interest in graphic design began with my passion for art and stories since childhood.
-                          I'm always eager to learn and be inspired by new things. As a creative, I hope to also spark joy and inspiration with my works.
-                <br></br> In my free time, I enjoy drawing, playing video games, or watching movies and TV shows. My favorites are JoJo's Bizarre Adventure and Final Fantasy XIV.
-                <br></br> Find me on <a href="https://twitter.com/rmkafu">Twitter</a> and <a href="https://www.instagram.com/rmkafu/">Instagram</a> @rmkafu.
-              </p>
+              <p>My name is Valentina, a designer and illustrator based in Sacramento, California.
+                I’m currently a graphic design BFA candidate and a design intern for The Lab, an on-campus graphic design studio of Union WELL, Inc. at Sacramento State.</p>
+              <p>Like many designers and illustrators, my interest in graphic design began with my passion for art and stories since childhood.
+                I'm always eager to learn and be inspired by new things. As a creative, I hope to also spark joy and inspiration with my works.</p>
+              <p>In my free time, I enjoy drawing, playing video games, or watching movies and TV shows. My favorites are JoJo's Bizarre Adventure and Final Fantasy XIV.</p>
+              <p>Follow me @rmkafu on <a href="https://twitter.com/rmkafu">Twitter</a> and <a href="https://www.instagram.com/rmkafu/">Instagram</a>.</p>
             </div>
           </row>
         </div>
